<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <Button
        android:layout_width="375sp"
        android:layout_height="wrap_content"
        android:text="@string/move_activity"
        android:layout_marginTop="95dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_move_activity"
        android:background="@color/purple_700"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="375sp"
        android:layout_height="wrap_content"
        android:text="@string/move_with_data"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_move_with_data"
        android:layout_below="@id/btn_move_activity"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="375sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_move_with_data"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/purple_700"
        android:text="@string/dial_number"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_move_activity_for_result"
        android:layout_width="375sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_dial_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/purple_700"
        android:text="Move Activity For Result"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="KELUAR"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:id="@+id/btn_exit"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_move_activity_for_result"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:hint="@string/result_from_activity"
        android:text="@string/result_from_activity"
        android:textSize="34sp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"/>


</RelativeLayout>